p2/y.output
Terminals unused in grammar

    Unary


Grammar

    0 $accept: Program $end

    1 Program: MainClass

    2 MainClass: KW_CLASS ID '{' StaticVarDecl StaticMethodDecl MainMethod '}'

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID MAIN '(' KW_STR '[' ']' ID ')' '{' StatementList '}'

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE KW_STATIC Type ID EqlExp StaticVarDeclTail ';'
    5              | %empty

    6 EqlExp: '=' Exp_or
    7       | %empty

    8 StaticVarDeclTail: StaticVarDeclTail ',' ID EqlExp
    9                  | %empty

   10 StaticMethodDecl: StaticMethodDecl KW_PUBLIC KW_STATIC Type ID '(' IfFormalList ')' '{' StatementList '}'
   11                 | %empty

   12 IfFormalList: FormalList
   13             | %empty

   14 StatementList: StatementList Statement
   15              | %empty

   16 VarDecl: Type ID EqlExp StaticVarDeclTail ';'

   17 FormalList: Type ID FormalListTail

   18 FormalListTail: FormalListTail ',' Type ID
   19               | %empty

   20 PrimeType: KW_INT
   21          | KW_BOOL
   22          | KW_STR

   23 Type: PrimeType
   24     | Type '[' ']'

   25 Statement: VarDecl
   26          | '{' StatementList '}'
   27          | KW_IF '(' Exp_or ')' Statement KW_ELSE Statement
   28          | KW_WHILE '(' Exp_or ')' Statement
   29          | KW_SYSTEM '.' KW_OUT '.' KW_PRINTLN '(' Exp_or ')' ';'
   30          | KW_SYSTEM '.' KW_OUT '.' KW_PRINT '(' Exp_or ')' ';'
   31          | LeftValue '=' Exp_or ';'
   32          | KW_RETURN Exp_or ';'
   33          | MethodCall ';'

   34 MethodCall: ID '(' ExpList ')'
   35           | ID '(' ')'
   36           | CLASS_INTEGER '.' INTEGER_PARSEINT '(' Exp_or ')'

   37 Exp_or: Exp_or TOK_OR Exp_and
   38       | Exp_and

   39 Exp_and: Exp_and TOK_AND Exp_eql
   40        | Exp_eql

   41 Exp_eql: Exp_eql TOK_EQLEQL Exp_ineql
   42        | Exp_eql TOK_NEQ Exp_ineql
   43        | Exp_ineql

   44 Exp_ineql: Exp_ineql '<' Exp_plusminus
   45          | Exp_ineql '>' Exp_plusminus
   46          | Exp_ineql TOK_LEQ Exp_plusminus
   47          | Exp_ineql TOK_GEQ Exp_plusminus
   48          | Exp_plusminus

   49 Exp_plusminus: Exp_plusminus '+' Exp_muldiv
   50              | Exp_plusminus '-' Exp_muldiv
   51              | Exp_muldiv

   52 Exp_muldiv: Exp_muldiv '*' Exp_factor
   53           | Exp_muldiv '/' Exp_factor
   54           | Exp_factor

   55 Exp_factor: Factor

   56 Factor: '!' Factor
   57       | '+' Factor
   58       | '-' Factor
   59       | '(' Exp_or ')'
   60       | LeftValue
   61       | LeftValue '.' STRING_LENGTH
   62       | INT_LIT
   63       | STR_LIT
   64       | KW_TRUE
   65       | KW_FALSE
   66       | MethodCall
   67       | KW_NEW PrimeType Index

   68 Index: Index '[' Exp_or ']'
   69      | '[' Exp_or ']'

   70 ExpList: Exp_or ExpListTail

   71 ExpListTail: ExpListTail ',' Exp_or
   72            | %empty

   73 LeftValue: ID
   74          | LeftValue '[' Exp_or ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 56
    '(' (40) 3 10 27 28 29 30 34 35 36 59
    ')' (41) 3 10 27 28 29 30 34 35 36 59
    '*' (42) 52
    '+' (43) 49 57
    ',' (44) 8 18 71
    '-' (45) 50 58
    '.' (46) 29 30 36 61
    '/' (47) 53
    ';' (59) 4 16 29 30 31 32 33
    '<' (60) 44
    '=' (61) 6 31
    '>' (62) 45
    '[' (91) 3 24 68 69 74
    ']' (93) 3 24 68 69 74
    '{' (123) 2 3 10 26
    '}' (125) 2 3 10 26
    error (256)
    TOK_AND (258) 39
    TOK_NEQ (259) 42
    TOK_OR (260) 37
    TOK_LEQ (261) 46
    TOK_GEQ (262) 47
    TOK_EQLEQL (263) 41
    MAIN (264) 3
    KW_PUBLIC (265) 3 10
    KW_PRIVATE (266) 4
    KW_STATIC (267) 3 4 10
    KW_CLASS (268) 2
    KW_VOID (269) 3
    KW_INT (270) 20
    KW_BOOL (271) 21
    KW_STR (272) 3 22
    KW_IF (273) 27
    KW_ELSE (274) 27
    KW_WHILE (275) 28
    KW_NEW (276) 67
    KW_RETURN (277) 32
    KW_SYSTEM (278) 29 30
    KW_OUT (279) 29 30
    KW_PRINT (280) 30
    KW_PRINTLN (281) 29
    KW_TRUE (282) 64
    KW_FALSE (283) 65
    CLASS_INTEGER (284) 36
    INTEGER_PARSEINT (285) 36
    STRING_LENGTH (286) 61
    INT_LIT <integer> (287) 62
    STR_LIT <string> (288) 63
    ID <string> (289) 2 3 4 8 10 16 17 18 34 35 73
    Unary (290)
    Paren (291)


Nonterminals, with rules where they appear

    $accept (54)
        on left: 0
    Program <node> (55)
        on left: 1
        on right: 0
    MainClass <node> (56)
        on left: 2
        on right: 1
    MainMethod <node> (57)
        on left: 3
        on right: 2
    StaticVarDecl <node> (58)
        on left: 4 5
        on right: 2 4
    EqlExp <node> (59)
        on left: 6 7
        on right: 4 8 16
    StaticVarDeclTail <node> (60)
        on left: 8 9
        on right: 4 8 16
    StaticMethodDecl <node> (61)
        on left: 10 11
        on right: 2 10
    IfFormalList <node> (62)
        on left: 12 13
        on right: 10
    StatementList <node> (63)
        on left: 14 15
        on right: 3 10 14 26
    VarDecl <node> (64)
        on left: 16
        on right: 25
    FormalList <node> (65)
        on left: 17
        on right: 12
    FormalListTail <node> (66)
        on left: 18 19
        on right: 17 18
    PrimeType <node> (67)
        on left: 20 21 22
        on right: 23 67
    Type <node> (68)
        on left: 23 24
        on right: 4 10 16 17 18 24
    Statement <node> (69)
        on left: 25 26 27 28 29 30 31 32 33
        on right: 14 27 28
    MethodCall <node> (70)
        on left: 34 35 36
        on right: 33 66
    Exp_or <node> (71)
        on left: 37 38
        on right: 6 27 28 29 30 31 32 36 37 59 68 69 70 71 74
    Exp_and <node> (72)
        on left: 39 40
        on right: 37 38 39
    Exp_eql <node> (73)
        on left: 41 42 43
        on right: 39 40 41 42
    Exp_ineql <node> (74)
        on left: 44 45 46 47 48
        on right: 41 42 43 44 45 46 47
    Exp_plusminus <node> (75)
        on left: 49 50 51
        on right: 44 45 46 47 48 49 50
    Exp_muldiv <node> (76)
        on left: 52 53 54
        on right: 49 50 51 52 53
    Exp_factor <node> (77)
        on left: 55
        on right: 52 53 54
    Factor <node> (78)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67
        on right: 55 56 57 58
    Index <node> (79)
        on left: 68 69
        on right: 67 68
    ExpList <node> (80)
        on left: 70
        on right: 34
    ExpListTail <node> (81)
        on left: 71 72
        on right: 70 71
    LeftValue <node> (82)
        on left: 73 74
        on right: 31 60 61 74


State 0

    0 $accept: . Program $end

    KW_CLASS  shift, and go to state 1

    Program    go to state 2
    MainClass  go to state 3


State 1

    2 MainClass: KW_CLASS . ID '{' StaticVarDecl StaticMethodDecl MainMethod '}'

    ID  shift, and go to state 4


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


State 3

    1 Program: MainClass .

    $default  reduce using rule 1 (Program)


State 4

    2 MainClass: KW_CLASS ID . '{' StaticVarDecl StaticMethodDecl MainMethod '}'

    '{'  shift, and go to state 6


State 5

    0 $accept: Program $end .

    $default  accept


State 6

    2 MainClass: KW_CLASS ID '{' . StaticVarDecl StaticMethodDecl MainMethod '}'

    $default  reduce using rule 5 (StaticVarDecl)

    StaticVarDecl  go to state 7


State 7

    2 MainClass: KW_CLASS ID '{' StaticVarDecl . StaticMethodDecl MainMethod '}'
    4 StaticVarDecl: StaticVarDecl . KW_PRIVATE KW_STATIC Type ID EqlExp StaticVarDeclTail ';'

    KW_PRIVATE  shift, and go to state 8

    $default  reduce using rule 11 (StaticMethodDecl)

    StaticMethodDecl  go to state 9


State 8

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE . KW_STATIC Type ID EqlExp StaticVarDeclTail ';'

    KW_STATIC  shift, and go to state 10


State 9

    2 MainClass: KW_CLASS ID '{' StaticVarDecl StaticMethodDecl . MainMethod '}'
   10 StaticMethodDecl: StaticMethodDecl . KW_PUBLIC KW_STATIC Type ID '(' IfFormalList ')' '{' StatementList '}'

    KW_PUBLIC  shift, and go to state 11

    MainMethod  go to state 12


State 10

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE KW_STATIC . Type ID EqlExp StaticVarDeclTail ';'

    KW_INT   shift, and go to state 13
    KW_BOOL  shift, and go to state 14
    KW_STR   shift, and go to state 15

    PrimeType  go to state 16
    Type       go to state 17


State 11

    3 MainMethod: KW_PUBLIC . KW_STATIC KW_VOID MAIN '(' KW_STR '[' ']' ID ')' '{' StatementList '}'
   10 StaticMethodDecl: StaticMethodDecl KW_PUBLIC . KW_STATIC Type ID '(' IfFormalList ')' '{' StatementList '}'

    KW_STATIC  shift, and go to state 18


State 12

    2 MainClass: KW_CLASS ID '{' StaticVarDecl StaticMethodDecl MainMethod . '}'

    '}'  shift, and go to state 19


State 13

   20 PrimeType: KW_INT .

    $default  reduce using rule 20 (PrimeType)


State 14

   21 PrimeType: KW_BOOL .

    $default  reduce using rule 21 (PrimeType)


State 15

   22 PrimeType: KW_STR .

    $default  reduce using rule 22 (PrimeType)


State 16

   23 Type: PrimeType .

    $default  reduce using rule 23 (Type)


State 17

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE KW_STATIC Type . ID EqlExp StaticVarDeclTail ';'
   24 Type: Type . '[' ']'

    ID   shift, and go to state 20
    '['  shift, and go to state 21


State 18

    3 MainMethod: KW_PUBLIC KW_STATIC . KW_VOID MAIN '(' KW_STR '[' ']' ID ')' '{' StatementList '}'
   10 StaticMethodDecl: StaticMethodDecl KW_PUBLIC KW_STATIC . Type ID '(' IfFormalList ')' '{' StatementList '}'

    KW_VOID  shift, and go to state 22
    KW_INT   shift, and go to state 13
    KW_BOOL  shift, and go to state 14
    KW_STR   shift, and go to state 15

    PrimeType  go to state 16
    Type       go to state 23


State 19

    2 MainClass: KW_CLASS ID '{' StaticVarDecl StaticMethodDecl MainMethod '}' .

    $default  reduce using rule 2 (MainClass)


State 20

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE KW_STATIC Type ID . EqlExp StaticVarDeclTail ';'

    '='  shift, and go to state 24

    $default  reduce using rule 7 (EqlExp)

    EqlExp  go to state 25


State 21

   24 Type: Type '[' . ']'

    ']'  shift, and go to state 26


State 22

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID . MAIN '(' KW_STR '[' ']' ID ')' '{' StatementList '}'

    MAIN  shift, and go to state 27


State 23

   10 StaticMethodDecl: StaticMethodDecl KW_PUBLIC KW_STATIC Type . ID '(' IfFormalList ')' '{' StatementList '}'
   24 Type: Type . '[' ']'

    ID   shift, and go to state 28
    '['  shift, and go to state 21


State 24

    6 EqlExp: '=' . Exp_or

    KW_NEW         shift, and go to state 29
    KW_TRUE        shift, and go to state 30
    KW_FALSE       shift, and go to state 31
    CLASS_INTEGER  shift, and go to state 32
    INT_LIT        shift, and go to state 33
    STR_LIT        shift, and go to state 34
    ID             shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '('            shift, and go to state 38
    '!'            shift, and go to state 39

    MethodCall     go to state 40
    Exp_or         go to state 41
    Exp_and        go to state 42
    Exp_eql        go to state 43
    Exp_ineql      go to state 44
    Exp_plusminus  go to state 45
    Exp_muldiv     go to state 46
    Exp_factor     go to state 47
    Factor         go to state 48
    LeftValue      go to state 49


State 25

    4 StaticVarDecl: StaticVarDecl KW_PRIVATE KW_STATIC Type ID EqlExp . StaticVarDeclTail ';'

    $default  reduce using rule 9 (StaticVarDeclTail)

    StaticVarDeclTail  go to state 50


State 26

   24 Type: Type '[' ']' .

    $default  reduce using rule 24 (Type)


State 27

    3 MainMethod: KW_PUBLIC KW_STATIC KW_VOID MAIN . '(' KW_STR '[' ']' ID ')' '{' StatementList '}'

    '('  shift, and go to state 51


State 28

   10 StaticMethodDecl: StaticMethodDecl KW_PUBLIC KW_STATIC Type ID . '(' IfFormalList ')' '{' StatementList '}'

    '('  shift, and go to state 52


State 29

   67 Factor: KW_NEW . PrimeType Index

    KW_INT   shift, and go to state 13
    KW_BOOL  shift, and go to state 14
    KW_STR   shift, and go to state 15

    PrimeType  go to state 53


State 30

   64 Factor: KW_TRUE .

    $default  reduce using rule 64 (Factor)


State 31

   65 Factor: KW_FALSE .

    $default  reduce using rule 65 (Factor)


State 32

   36 MethodCall: CLASS_INTEGER . '.' INTEGER_PARSEINT '(' Exp_or ')'

    '.'  shift, and go to state 54


State 33

   62 Factor: INT_LIT .

    $default  reduce using rule 62 (Factor)


State 34

   63 Factor: STR_LIT .

    $default  reduce using rule 63 (Factor)


State 35

   34 MethodCall: ID . '(' ExpList ')'
   35           | ID . '(' ')'
   73 LeftValue: ID .

    '('  shift, and go to state 55

    $default  reduce using rule 73 (LeftValue)


State 36

   57 Factor: '+' . Factor

    KW_NEW         shift, and go to state 29
    KW_TRUE        shift, and go to state 30
    KW_FALSE       shift, and go to state 31
    CLASS_INTEGER  shift, and go to state 32
    INT_LIT        shift, and go to state 33
    STR_LIT        shift, and go to state 34
    ID             shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '('            shift, and go to state 38
    '!'            shift, and go to state 39

    MethodCall  go to state 40
    Factor      go to state 56
    LeftValue   go to state 49


State 37

   58 Factor: '-' . Factor

    KW_NEW         shift, and go to state 29
    KW_TRUE        shift, and go to state 30
    KW_FALSE       shift, and go to state 31
    CLASS_INTEGER  shift, and go to state 32
    INT_LIT        shift, and go to state 33
    STR_LIT        shift, and go to state 34
    ID             shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '('            shift, and go to state 38
    '!'            shift, and go to state 39

    MethodCall  go to state 40
    Factor      go to state 57
    LeftValue   go to state 49


State 38

   59 Factor: '(' . Exp_or ')'

    KW_NEW         shift, and go to state 29
    KW_TRUE        shift, and go to state 30
    KW_FALSE       shift, and go to state 31
    CLASS_INTEGER  shift, and go to state 32
    INT_LIT        shift, and go to state 33
    STR_LIT        shift, and go to state 34
    ID             shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '('            shift, and go to state 38
    '!'            shift, and go to state 39

    MethodCall     go to state 40
    Exp_or         go to state 58
    Exp_and        go to state 42
    Exp_eql        go to state 43
    Exp_ineql      go to state 44
    Exp_plusminus  go to state 45
    Exp_muldiv     go to state 46
    Exp_factor     go to state 47
    Factor         go to state 48
    LeftValue      go to state 49


State 39

   56 Factor: '!' . Factor

    KW_NEW         shift, and go to state 29
    KW_TRUE        shift, and go to state 30
    KW_FALSE       shift, and go to state 31
    CLASS_INTEGER  shift, and go to state 32
    INT_LIT        shift, and go to state 33
    STR_LIT        shift, and go to state 34
    ID             shift, and go to state 35
    '+'            shift, and go to state 36
    '-'            shift, and go to state 37
    '('            shift, and go to state 38
    '!'            shift, and go to state 39

    MethodCall  go to state 40
    Factor      go to state 59
    LeftValue   go to state 49


State 40

   66 Factor: MethodCall .

    $default  reduce using rule 66 (Factor)


State 41

    6 EqlExp: '=' Exp_or .
   37 Exp_or: Exp_or . TOK_OR Exp_and

    TOK_OR  shift, and go to state 60

    $default  reduce using rule 6 (EqlExp)


State 42

   38 Exp_or: Exp_and .
   39 Exp_and: Exp_and . TOK_AND Exp_eql

    TOK_AND  shift, and go to state 61

    $default  reduce using rule 38 (Exp_or)


State 43
